[package]

name = "img_hash_median"
version = "4.0.0"
authors = ["Austin Bonander <austin.bonander@gmail.com>", "Alex DeLorenzo <alex@alexdelorenzo.dev>"]

description = "A simple library that provides perceptual hashing and difference calculation for images. Includes median PHash"

license = "AGPL"

documentation = "http://docs.rs/img_hash"

keywords = ["image", "hash", "perceptual", "difference"]

repository = "http://github.com/alexdelorenzo/img_hash"

edition = "2015"

readme = "README.md"

[features]
nightly = []

[dependencies]
base64 = ">=0.10,<0.12"
image = ">=0.21,<0.24"
rustdct = "0.4"
serde = { version = "1.0", features = ["derive"] }
transpose = "0.2"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "byte_to_float"
harness = false

[[bin]]
name = "hash_image"
